--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <img src="./img/Hanh.jpg" alt="profile" class="profile-picture" id="imagePath"/>
             <img src="img/hat.svg" alt="hat" class="hat" />
             <div class="wish">
-                <h3 class="wish-hbd">Chúc Mừng Sinh Nhật!</h3>
+                <h3 class="wish-hbd">Happy Birthday!</h3>
                 <h5 id="wishText">Mong rằng hôm nay bạn sẽ vui vẻ! ;)</h5>
             </div>
         </div>
